# webconsole/src/api/models/software-response.ts
@@ -1,28 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * sctgdesk-api-server
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * OpenAPI spec version: 0.1.0
- * 
- *
- * NOTE: This class is auto generated by the swagger code generator program.
- * https://github.com/swagger-api/swagger-codegen.git
- * Do not edit the class manually.
- */
-
- /**
- * 
- *
- * @export
- * @interface SoftwareResponse
- */
-export interface SoftwareResponse {
-
-    /**
-     * @type {string}
-     * @memberof SoftwareResponse
-     */
-    url: string;
-}
